# BaysianBoxCoxLM

./: .gitignore  README.md  main.py  pyproject.toml  setup.cfg
boxcox_lm/: __init__.py
boxcox_lm/model/: __init__.py  base.py  numpyro.py
boxcox_lm/model/cmdstanpy/: __init__.py  model.stan
tests/: test_boxcox_test.py
